--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -5,6 +5,10 @@
         <div class="col-sm-8">
         </div>
         <h3>welcome to my site</h3>
+        
+        <a href="{% url 'chat-home' %}">click to chat</a>
+        
+    </ul>
     
     </div>
     
